<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="@dimen/product_info_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/productNameTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/label_actual_quantity"
                android:textAlignment="textStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productQtyTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/label_unit_price"
                android:textAlignment="textStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productUnitPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center" />
        </LinearLayout>

        <Button
            android:id="@+id/productAddToCartBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_baseline_shopping_cart_24"
            android:contentDescription="@string/label_add_to_Cart"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/productImageView"
        android:layout_width="@dimen/product_image_width"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/product_image_description"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"/>


</LinearLayout>