<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderDetailsActivity_SSNT" >

    <TextView
        android:id="@+id/textViewOrderInfoDate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/info_height"
        android:layout_marginTop="@dimen/product_info_margin"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/info_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/product_info_margin"
            android:layout_weight="1"
            android:text="@string/label_order_id"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewOrderInfoID"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/label_order_user"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewOrderInfoUserClient"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/info_height"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/info_height"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/product_info_margin"
                android:layout_weight="1"
                android:text="@string/label_order_totalIVA"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewOrderInfoTotalIva"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/info_height"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/label_order_total_no_IVA"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewOrderInfoTotal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/listViewOrderDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>